src/objects/Anoto_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Protected</customSettingsVisibility>
    <fields>
        <fullName>Consumer_Key__c</fullName>
        <label>Consumer Key</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consumer_Secret__c</fullName>
        <label>Consumer Secret</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <label>Password</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <label>Username</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Anoto Settings</label>
</CustomObject>